# OpenUSD

./: .gitignore
cmake/modules/: FindPySide.cmake
pxr/base/tf/: fileUtils.cpp  pathUtils.cpp
pxr/imaging/: CMakeLists.txt
pxr/imaging/fabric/: CMakeLists.txt  api.h  articulationRootSchema.cpp  articulationRootSchema.h  collisionGroupSchema.cpp  collisionGroupSchema.h  collisionSchema.cpp  collisionSchema.h  distanceJointSchema.cpp  distanceJointSchema.h  driveSchema.cpp  driveSchema.h  fabric.cpp  fabric.h  fabricSceneIndex.cpp  fabricSceneIndex.h  filteredPairsSchema.cpp  filteredPairsSchema.h  fixedJointSchema.cpp  fixedJointSchema.h  hdSchemaDefs.py  jointSchema.cpp  jointSchema.h  limitSchema.cpp  limitSchema.h  massSchema.cpp  massSchema.h  materialSchema.cpp  materialSchema.h  meshCollisionSchema.cpp  meshCollisionSchema.h  physxArticulationSchema.cpp  physxArticulationSchema.h  physxCameraDroneSchema.cpp  physxCameraDroneSchema.h  physxCameraFollowLookSchema.cpp  physxCameraFollowLookSchema.h  physxCameraFollowSchema.cpp  physxCameraFollowSchema.h  physxCameraFollowVelocitySchema.cpp  (+118 more)
pxr/imaging/hd/: CMakeLists.txt  articulationRootSchema.cpp  articulationRootSchema.h  collisionGroupSchema.cpp  collisionGroupSchema.h  collisionSchema.cpp  collisionSchema.h  dataSourceTypeDefs.h  directMaterialBindingSchema.cpp  directMaterialBindingSchema.h  directMaterialBindingsSchema.cpp  directMaterialBindingsSchema.h  distanceJointSchema.cpp  distanceJointSchema.h  driveEntrySchema.cpp  driveEntrySchema.h  driveSchema.cpp  driveSchema.h  engine.cpp  fabric.cpp  fabric.h  fabricSceneIndex.cpp  fabricSceneIndex.h  filteredPairsSchema.cpp  filteredPairsSchema.h  fixedJointSchema.cpp  fixedJointSchema.h  hdGenSchema.py  hdSchemaDefs.py  jointSchema.cpp  jointSchema.h  limitEntrySchema.cpp  limitEntrySchema.h  limitSchema.cpp  limitSchema.h  massSchema.cpp  massSchema.h  meshCollisionSchema.cpp  meshCollisionSchema.h  physicsMaterialSchema.cpp  (+143 more)
pxr/imaging/hdsi/: CMakeLists.txt  physicsSceneIndex.cpp  physicsSceneIndex.h
pxr/imaging/hdx/: CMakeLists.txt  debugDrawTask.cpp  debugDrawTask.h  package.cpp  package.h  taskController.cpp  taskController.h
pxr/imaging/hdx/shaders/: debugDraw.glslfx
pxr/imaging/hgi/: CMakeLists.txt  buffer.h  helper_cuda.h
pxr/imaging/hgiGL/: buffer.cpp  buffer.h
pxr/imaging/hgiVulkan/: buffer.cpp  buffer.h
pxr/usd/: CMakeLists.txt
pxr/usd/ar/: CMakeLists.txt  filesystemAsset.cpp
pxr/usd/usdPhysX/: CMakeLists.txt  api.h  articulationAPI.cpp  articulationAPI.h  cameraAPI.cpp  cameraAPI.h  cameraDroneAPI.cpp  cameraDroneAPI.h  cameraFollowAPI.cpp  cameraFollowAPI.h  cameraFollowLookAPI.cpp  cameraFollowLookAPI.h  cameraFollowVelocityAPI.cpp  cameraFollowVelocityAPI.h  characterControllerAPI.cpp  characterControllerAPI.h  collisionAPI.cpp  collisionAPI.h  contactReportAPI.cpp  contactReportAPI.h  convexDecompositionCollisionAPI.cpp  convexDecompositionCollisionAPI.h  convexHullCollisionAPI.cpp  convexHullCollisionAPI.h  cookedDataAPI.cpp  cookedDataAPI.h  forceAPI.cpp  forceAPI.h  generatedSchema.classes.txt  generatedSchema.module.h  generatedSchema.usda  isosurfaceAPI.cpp  isosurfaceAPI.h  jointAPI.cpp  jointAPI.h  jointStateAPI.cpp  jointStateAPI.h  materialAPI.cpp  materialAPI.h  meshMergeCollisionAPI.cpp  (+209 more)
pxr/usdImaging/: CMakeLists.txt
pxr/usdImaging/sim/: CMakeLists.txt  api.h  filterShader.cpp  filterShader.h  physicsSceneIndex.cpp  physicsSceneIndex.h  physxDataSource.cpp  physxDataSource.h  physxEngine.cpp  physxEngine.h  physxScene.cpp  physxScene.h  plugInfo.json  utils.cpp  utils.h
pxr/usdImaging/usdImaging/: CMakeLists.txt  flattenedDataSourceProviders.cpp  flattenedDirectMaterialBindingsDataSourceProvider.cpp  hdSchemaDefs.py  materialBindingAPIAdapter.cpp  materialBindingsResolvingSceneIndex.cpp  sceneIndices.cpp
pxr/usdImaging/usdImagingGL/: CMakeLists.txt  engine.cpp  engine.h
pxr/usdImaging/usdPhysicsImaging/: CMakeLists.txt  api.h  articulationAPIAdapter.cpp  articulationAPIAdapter.h  articulationRootAPIAdapter.cpp  articulationRootAPIAdapter.h  articulationRootSchema.cpp  articulationRootSchema.h  articulationSchema.cpp  articulationSchema.h  collisionAPIAdapter.cpp  collisionAPIAdapter.h  collisionGroupAdapter.cpp  collisionGroupAdapter.h  collisionGroupSchema.cpp  collisionGroupSchema.h  collisionSchema.cpp  collisionSchema.h  dataSourceDistanceJoint.cpp  dataSourceDistanceJoint.h  dataSourceFixedJoint.cpp  dataSourceFixedJoint.h  dataSourceGearJoint.cpp  dataSourceGearJoint.h  dataSourceJoint.cpp  dataSourceJoint.h  dataSourcePrismaticJoint.cpp  dataSourcePrismaticJoint.h  dataSourceRackAndPinionJoint.cpp  dataSourceRackAndPinionJoint.h  dataSourceRevoluteJoint.cpp  dataSourceRevoluteJoint.h  dataSourceSphericalJoint.cpp  dataSourceSphericalJoint.h  dependentPrimsDataSource.cpp  dependentPrimsDataSource.h  distanceJointAdapter.cpp  distanceJointAdapter.h  distanceJointSchema.cpp  distanceJointSchema.h  (+286 more)
